--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -19,7 +19,7 @@
 {
 	margin-top: auto;
     margin-bottom: auto;
-    color: #565656;
+    color: #420c0c;
     font-size: 26px;
     margin-left: 2%;
 }
